# mod_authnz_persona

./: .gitignore  .indent.pro  Makefile  Makefile.am  README.md  apache-conf-sample.conf  buildconf  config.h  configure.ac  cookie.h  mod_auth_browserid.c
m4/: libcurl_check_config.m4
src/: config.h  cookie.c  cookie.h  defines.h  error.html  hmac.c  hmac.h  mod_auth_browserid.c  mod_authn_persona.c  mod_authnz_persona.c  signin.html  verify.c  verify.h
t/conf/: extra.conf.in
tools/: bin2c.c
